# actix-rbatis-redis-rpc-demo

./: Cargo.toml
macros/: Cargo.toml
macros/src/: actix.rs  lib.rs  rbatis.rs  rpcx.rs  util.rs
model/: error.rs  global.rs  mod.rs
model/dto/: mod.rs  user.rs  user_role.rs  user_token.rs
model/table/: mod.rs  user.rs  user_role.rs  user_token.rs
model/vo/: mod.rs  user.rs  user_role.rs  user_token.rs
provider/: Cargo.toml  config.toml
provider/src/: main.rs
provider/src/config/: mod.rs
provider/src/dao/: mod.rs  user.rs  user_role.rs  user_token.rs
provider/src/pvd/: mod.rs  user.rs  user_role.rs  user_token.rs
service/: Cargo.toml  config.toml
service/src/: main.rs
service/src/auth/: jwt.rs  mod.rs
service/src/config/: mod.rs
service/src/controller/: mod.rs  user.rs  user_role.rs
service/src/csm/: mod.rs  user.rs  user_role.rs  user_token.rs
test/: Cargo.toml  test.yaml
test/src/: main.rs
util/: Cargo.toml
util/src/: lib.rs  password_encoder.rs  redis.rs  time.rs
