[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.17.0"

actix-web = "4.0.1"
jsonwebtoken = "8"

serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15.5"

chrono = { version = "0.4", features = ["serde"] }

rbson = { version = "2.0.3", features = ["uuid-0_8", "chrono-0_4"] }
rbatis = { version = "4"}

log = "0.4.14"
fast_log = "1.5.1"

toml = "0.5.8"

r2d2_redis_cluster="0.1.6"

lazy_static = "1.4.0"

futures-util = "0.3.23"

util = {version="0.1.0",path="../util"}

rpcx =  { version="0.3.0",path="D:/rust/rpcx-rs/rpcx" }

macros = {version="0.1.0",path="../macros"}

backtrace = "0.3.65" 