[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

redis_cluster_async={version="0.7.0"}

once_cell = "1.9"

md5 = "0.7"

chrono = { version = "0.4", features = ["serde"] }

rand = "0.6.5"
uuid = {version="1.1.2",features = ["v4", "fast-rng", "macro-diagnostics", ]}